# trading_dashboard

./: .gitignore  app.py  main.py  pyproject.toml
.streamlit/: config.toml  example.toml
attached_assets/: Pasted-2025-02-28-20-36-39-815-Roboto-Mono-is-an-invalid-value-for-theme-font-Allowed-values-include-s-1740776586468.txt
components/: balances.py  funding_rates.py  funding_rates_updated.py  historical.py  pnl_analysis.py  positions.py  summary.py
pages/: debug.py
styles/: custom.css
tests/: __init__.py  test_data_processor.py
utils/: __init__.py  api_tester.py  data_processor.py  db_manager.py  exchange_client.py  exchange_client.py.bak  fee_tracker.py  formatting.py
